<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/item_id"
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/row1Id"></TextView>

    <EditText
        android:id="@+id/edit_item_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:hint="Item Name"
        android:textSize="14sp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_height="40dp"></EditText>


    <TextView
        android:id="@+id/quantity"
        android:textSize="14sp"
        android:layout_width="50dp"
        android:layout_height="40dp"></TextView>


    <Button
        android:id="@+id/increaseQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="10sp"
        android:text="@string/increaseQuantity"
        android:textSize="12sp" />

    <Button
        android:id="@+id/decreaseQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="10sp"
        android:text="@string/decreaseQuantity"
        android:textSize="12sp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="10sp"
        android:text="@string/deleteItem"
        android:textSize="12sp"></Button>

</LinearLayout>